# zendesk-kb-configurator

./: .env.example  README.md  pyproject.toml  requirements-dev.txt
src/zendesk_kb_configurator/: __init__.py  configurator.py  models.py
tests/: __init__.py  test_configurator.py
